@@ -1,5 +1,6 @@
 x.x.x
 UI: Add account ID to account info popup in Known Accounts page
+Other: If wrong, correct filename extensions of image attachments so QML displays them
 
 1.1.1 2023-09-13
 Bugfix: Settings item "Only fetch from DeltaChat folder" did not act correctly
